--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,12 +23,19 @@
           <li>
             <%= link_to "ログアウト", destroy_end_user_session_path, method: :delete  %>
           </li>
+        <% elsif farmer_signed_in? %>
+          <li>
+            <%= link_to "ログアウト", destroy_farmer_session_path, method: :delete %>
+          </li>
         <% else %>
           <li>
             <%= link_to "新規登録", new_end_user_registration_path %>
           </li>
           <li>
             <%= link_to "ログイン", new_end_user_session_path %>
+          </li>
+          <li>
+            <%= link_to "生産者はこちら", new_farmer_registration_path %>
           </li>
         <% end %>
       </ul>
