--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,44 +4,68 @@
     <title>AgriLife</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="veiwport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-
-    <header>
-      <ul>
-        <% if end_user_signed_in? %>
-          <li>
-            <%= link_to "About", about_path %>
-          </li>
-          <li>
-            <%= link_to "My page", my_page_public_end_users_path %>
-          </li>
-          <li>
-            <%= link_to "ログアウト", destroy_end_user_session_path, method: :delete  %>
-          </li>
-        <% elsif farmer_signed_in? %>
-          <li>
-            <%= link_to "ログアウト", destroy_farmer_session_path, method: :delete %>
-          </li>
-        <% else %>
-          <li>
-            <%= link_to "新規登録", new_end_user_registration_path %>
-          </li>
-          <li>
-            <%= link_to "ログイン", new_end_user_session_path %>
-          </li>
-          <li>
-            <%= link_to "生産者はこちら", new_farmer_registration_path %>
-          </li>
-        <% end %>
-      </ul>
-
-
+  <body class="d-flex flex-column vh-100">
+    <header class='shadow-sm'>
+      <nav class="navbar navbar-expand-lg navbar-silver">
+        <div class="container">
+          <a class="navbar-brand p-3" href="/"><%= image_tag 'logo.png', :size =>'120x40' %></a>
+          
+          <!--ハンバーガーメニュー-->
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if end_user_signed_in? %>
+                <li class="nav-item">
+                  <%= link_to "About", about_path, class: 'nav-link text-dark' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "My page", my_page_public_end_users_path, class: 'nav-link text-dark' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "ログアウト", destroy_end_user_session_path, method: :delete, class: 'nav-link text-dark' %>
+                </li>
+              <% elsif farmer_signed_in? %>
+                <li class="nav-item">
+                  <%= link_to "ログアウト", destroy_farmer_session_path, method: :delete, class: 'nav-link text-dark' %>
+                </li>
+              <% else %>
+                <li class="nav-item">
+                  <%= link_to "新規登録", new_end_user_registration_path, class: 'nav-link text-dark' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "ログイン", new_end_user_session_path, class: 'nav-link text-dark' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "生産者はこちら", new_farmer_registration_path, class: 'nav-link text-dark' %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
-    <%= yield %>
+
+    <main class="mb-auto">
+      <%= yield %>
+    </main>
+
+    <footer class="bg-dark text-white pt-5 pb-4 fixed-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="col-4">
+            <p>いつも身近に農業を！！</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
