--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,10 @@
  @import "bootstrap";
  @import 'font-awesome-sprockets';
  @import 'font-awesome';
- 
- 
- 
+
+
+ // body{
+  // background-image: url("roman-synkevych-fjj7lVpCxRE-unsplash.jpg");
+  // background-position: center;
+  // background-size: cover;
+ // }
