--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
       <%= yield %>
     </main>
 
-    <footer class="bg-dark text-white pt-5 pb-4 fixed-bottom">
+    <footer class="bg-dark text-white pt-5 pb-4">
       <div class="container">
         <div class="row">
           <div class="col-4">
