[Add]生産者マイページ

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,8 +18,8 @@
  @import 'font-awesome';
 
 
- // body{
-  // background-image: url("roman-synkevych-fjj7lVpCxRE-unsplash.jpg");
-  // background-position: center;
-  // background-size: cover;
- // }
+  .jumbotron{
+   background-image: url("roman-synkevych-fjj7lVpCxRE-unsplash.jpg");
+   background-position: center;
+   background-size: cover;
+ }
