--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,9 @@
-<h1>トップページになります</h1>
+  <div class="jumbotron text-center" style="height: 400px;"> 
+   <section class="py-5 container">
+      <div class="row py-lg-5">
+        <div class="col-lg-6 col-md-8 mx-auto">
+          <h1 class="align-middle">Aglilife</h1>
+        </div>
+      </div>
+    </section>
+  </div>
