--- a/app/views/producer/farmers/my_page.html.erb
+++ b/app/views/producer/farmers/my_page.html.erb
@@ -61,4 +61,7 @@
       </table>
     </div>
   </div>
+  <div class="row">
+    <div class="col-lg-12 d-flex justify-content-end"><%= link_to "編集する", edit_producer_farmer_path(@current_farmer), class: "btn btn-secondary" %></div>
+  </div>
 </div>
