--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="veiwport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
+    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -37,6 +38,12 @@
               <% elsif farmer_signed_in? %>
                 <li class="nav-item">
                   <%= link_to "ログアウト", destroy_farmer_session_path, method: :delete, class: 'nav-link text-dark' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "新規投稿する", new_producer_topic_path, class: 'nav-link text-dark' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "Topic", producer_topics_path, class: 'nav-link text-dark' %>
                 </li>
               <% else %>
                 <li class="nav-item">
