--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,9 @@
                   <%= link_to "投稿一覧", public_topics_path, class: 'nav-link text-dark' %>
                 </li>
                 <li class="nav-item">
+                  <%= link_to "生産者さんを探す", serch_public_farmers_path, class: 'nav-link text-dark' %>
+                </li>
+                <li class="nav-item">
                   <%= link_to "ログアウト", destroy_end_user_session_path, method: :delete, class: 'nav-link text-dark' %>
                 </li>
               <% elsif farmer_signed_in? %>
