--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,8 +1,9 @@
-  <div class="jumbotron text-center" style="height: 400px;"> 
+  <div class="jumbotron text-center" style="height: 600px;">
    <section class="py-5 container">
       <div class="row py-lg-5">
-        <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="align-middle">Aglilife</h1>
+        <div class="col-lg-6 col-md-8 mx-auto ">
+          <h1 class="align-middle text-white">Aglilife</h1>
+          <h5 class="mt-4 text-white">農家さんの日常を覗いてみましょう</h>
         </div>
       </div>
     </section>
