--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="veiwport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -16,51 +16,51 @@
       <nav class="navbar navbar-expand-lg navbar-silver">
         <div class="container">
           <a class="navbar-brand p-3" href="/"><%= image_tag 'logo.png', :size =>'120x40' %></a>
-          
+
           <!--ハンバーガーメニュー-->
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          
+
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
               <% if end_user_signed_in? %>
                 <li>
                   ようこそ、<%= current_end_user.name %>さん！
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mx-2 border font-weight-bold">
                   <%= link_to "About", about_path, class: 'nav-link text-dark' %>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mr-2 border font-weight-bold">
                   <%= link_to "My page", my_page_public_end_users_path, class: 'nav-link text-dark' %>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mr-2 border font-weight-bold">
                   <%= link_to "投稿一覧", public_topics_path, class: 'nav-link text-dark' %>
                 </li>
-                <li class="nav-item">
-                  <%= link_to "生産者さんを探す", serch_public_farmers_path, class: 'nav-link text-dark' %>
+                <li class="nav-item mr-2 border font-weight-bold">
+                  <%= link_to "生産者さんを探す", search_public_farmers_path, class: 'nav-link text-dark' %>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item border font-weight-bold">
                   <%= link_to "ログアウト", destroy_end_user_session_path, method: :delete, class: 'nav-link text-dark' %>
                 </li>
               <% elsif farmer_signed_in? %>
-                <li class="nav-item">
+                <li class="nav-item mx-2 border font-weight-bold">
                   <%= link_to "ログアウト", destroy_farmer_session_path, method: :delete, class: 'nav-link text-dark' %>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mr-2 border font-weight-bold">
                   <%= link_to "新規投稿する", new_producer_topic_path, class: 'nav-link text-dark' %>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item border font-weight-bold">
                   <%= link_to "トピック履歴一覧", producer_topics_path, class: 'nav-link text-dark' %>
                 </li>
               <% else %>
-                <li class="nav-item">
+                <li class="nav-item mx-2 border font-weight-bold">
                   <%= link_to "新規登録", new_end_user_registration_path, class: 'nav-link text-dark' %>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mr-2 border font-weight-bold">
                   <%= link_to "ログイン", new_end_user_session_path, class: 'nav-link text-dark' %>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item border font-weight-bold">
                   <%= link_to "生産者はこちら", new_farmer_registration_path, class: 'nav-link text-dark' %>
                 </li>
               <% end %>
