[Update]会員側の生産者トピック一覧画面

--- a/app/views/public/farmers/search.html.erb
+++ b/app/views/public/farmers/search.html.erb
@@ -81,7 +81,9 @@
       <% end %>
     </div>
   <% elsif  @farmers.empty? && params[:q] %>
-    <h1>検索できませんでした</h1>
+    <div class="mt-5 mx-auto" style="width: 500px;">
+      <strong>・　検索できませんでした</storong>
+    </div>
   <% else %>
       <p></p>
   <% end %>
