--- a/app/views/producer/topics/index.html.erb
+++ b/app/views/producer/topics/index.html.erb
@@ -17,9 +17,23 @@
             </p>
             <p class="card-text">説明:<%= topic.body %></p>
             <span>By <%= topic.farmer.farm_name %></span>
+            <span>
+              <%= link_to(producer_topic_path(topic.id), class:"text-dark") do %>
+                <i class="fas fa-comments"></i> <%= topic.topic_comments.count %>
+              <% end %> |
+            </span>
+            <span>
+              <%= link_to(producer_topic_path(topic.id), class:"text-dark") do %>
+                <i class="fas fa-heart"></i> <%= topic.favorites.count %>
+              <% end %>
           </div>
         </div>
       </div>
     </div>
   <% end %>
+  <div class="row">
+    <div class="col-3 mx-auto pt-5">
+      <%= paginate @topics %>
+    </div>
+  </div>
 </div>
