--- a/app/views/producer/topics/show.html.erb
+++ b/app/views/producer/topics/show.html.erb
@@ -3,20 +3,35 @@
     <%= attachment_image_tag @topic, :topic_image, class:"card-img-top"; %>
     <div class="card-body">
       <div class="row">
-        <%= attachment_image_tag @topic.farmer, :profile_image, :fill, 80, 80, fallback: "no_image.jpg", class:"mt-3 rounded-circle"; %>
+        <div class="col-2">
+          <%= attachment_image_tag @topic.farmer, :profile_image, :fill, 80, 80, fallback: "no_image.jpg", class:"mt-3 rounded-circle"; %>
+        </div>
+        <div class="col-10">
+          <p class="card-title">
+            <%= link_to(producer_topic_path(@topic), class: "text-dark") do %>
+              <strong><%= @topic.title %></strong>
+            <% end %>
+          </p>
+          <p class="card-body">説明：<%= @topic.body %></p>
+          <span>By <%= @topic.farmer.name %> | </span>
+          <span> <%= @topic.created_at.strftime('%Y年%m月%d日%H時%M分') %> | </span>
+          <span><i class="fas fa-comments"></i> <%= @topic.topic_comments.count %> | </span>
+          <span><i class="fas fa-heart"></i> <%= @topic.favorites.count %> | </span>
+          <span><%= link_to "この投稿を削除する", producer_topic_path(@topic), method: :delete,  "data-confirm" => "本当に削除しますか?" %></span>
+        </div>
       </div>
-      <div class="col-10">
-        <p class="card-title">
-          <%= link_to(producer_topic_path(@topic), class: "text-dark") do %>
-            <strong><%= @topic.title %></strong>
-          <% end %>
-        </p>
-        <p class="card-body">説明：<%= @topic.body %></p>
-        <span>By <%= @topic.farmer.name %> | </span>
-        <span> <%= @topic.created_at.strftime('%Y年%m月%d日%H時%M分') %></span>
-      </div>
-      <div class="col-10">
-        <span><%= link_to "削除する", producer_topic_path(@topic), method: :delete,  "data-confirm" => "本当に削除しますか?" %></span>
+      <hr>  
+      <div class="comments card-text">
+        <h4 class="mt-3"><%= @topic.topic_comments.count %>件コメント</h4>
+        <% @topic.topic_comments.each do |topic_comment| %>
+          <div class="media border mb-3">
+            <%= attachment_image_tag topic_comment.end_user, :profile_image, :fill, 80, 80, fallback: "no_image.jpg", class:"bd-placeholder-img align-self-center mx-3" %>
+            <div class="media-body ml-4 p-3">
+              <p><%= topic_comment.created_at.strftime('%Y年%m月%d日%H時%M分') %></p>
+              <P><%= topic_comment.comment %></P>
+            </div>
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
