--- a/app/views/public/topics/index.html.erb
+++ b/app/views/public/topics/index.html.erb
@@ -20,7 +20,7 @@
             <span>
               <%= link_to(public_topic_path(topic.id), class:"text-dark") do %>
                 <i class="fas fa-comments"></i> <%= topic.topic_comments.count %>
-              <% end %> | 
+              <% end %> |
             </span>
             <span>
               <%= link_to(public_topic_path(topic.id), class:"text-dark") do %>
@@ -32,4 +32,9 @@
       </div>
     </div>
   <% end %>
+  <div class="row">
+    <div class="col-3 mx-auto pt-5"> 
+      <%= paginate @topics %>
+    </div>
+  </div>
 </div>
