--- a/app/views/public/topics/show.html.erb
+++ b/app/views/public/topics/show.html.erb
@@ -1,61 +1,46 @@
 <div class="topic-detail py-5 bg-light">
   <div class="card w-75 mx-auto mt-4 shadow-lg">
-    <%= attachment_image_tag @topic, :topic_image, class:"card-img-top"; %>
-    <div class="card-body">
-      <div class="row">
-        <div class="col-2">
-          <%= attachment_image_tag @topic.farmer, :profile_image, :fill, 100, 100, fallback: "no_image.jpg", class:"mt-3 rounded-circle"; %>
-        </div>
-        <div class="col-10">
-          <p class="card-title">
-            <%= link_to(producer_topic_path(@topic), class: "text-dark") do %>
-              <strong><%= @topic.title %></strong>
-            <% end %>
-          </p>
-          <p class="card-body">説明：<%= @topic.body %></p>
-          <span>By <%= @topic.farmer.name %> | </span>
-          <span> <%= @topic.created_at.strftime('%Y年%m月%d日%H時%M分') %> | </span>
-          <span><i class="fas fa-comments"></i> <%= link_to "#{@topic.topic_comments.count}", public_topic_path(@topic), class: "text-dark" %> | </span>
-          <% if @topic.favorited_by?(current_end_user) %>
-            <span>
-              <%= link_to(public_topic_favorites_path(@topic.id), class:"text-dark", method: :delete) do %>
-                <i class="fas fa-heart"></i> <%= @topic.favorites.count %>
-              <% end %>
-            </span>
-            <% else %>
-            <span>
-              <%= link_to(public_topic_favorites_path(@topic), class:"text-dark", method: :post) do %>
-                <i class="fas fa-heart"></i> <%= @topic.favorites.count %>
-              <% end %>
-            </span>
-          <% end %>
-        </div>
-      </div>
-      <hr>
-      <div class="comments card-text">
-        <h4 class="mt-3"><%= @topic.topic_comments.count %>件コメント</h4>
-        <% @topic.topic_comments.each do |topic_comment| %>
-          <div class="media border mb-3">
-            <%= attachment_image_tag topic_comment.end_user, :profile_image, :fill, 80, 80, fallback: "no_image.jpg", class:"bd-placeholder-img align-self-center mx-3" %>
-            <div class="media-body ml-4 p-3">
-              <p><%= topic_comment.created_at.strftime('%Y年%m月%d日%H時%M分') %></p>
-              <P><%= topic_comment.comment %></P>
-              <% if topic_comment.end_user == current_end_user %>
-                <%= link_to "削除", public_topic_topic_comment_path(topic_comment.topic, topic_comment), method: :delete, class: "btn btn-danger pull-right" %>
-              <% end %>
+    <div id="topic_<%= @topic.id %>">
+      <%= attachment_image_tag @topic, :topic_image, class:"card-img-top"; %>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-2">
+            <%= attachment_image_tag @topic.farmer, :profile_image, :fill, 100, 100, fallback: "no_image.jpg", class:"mt-3 rounded-circle"; %>
+          </div>
+          <div class="col-10">
+            <div id="topic_<%= @topic.id %>">
+              <p class="card-title">
+                <%= link_to(producer_topic_path(@topic), class: "text-dark") do %>
+                  <strong><%= @topic.title %></strong>
+                <% end %>
+              </p>
+              <p class="card-body">説明：<%= @topic.body %></p>
+              <span>By <%= @topic.farmer.name %> | </span>
+              <span> <%= @topic.created_at.strftime('%Y年%m月%d日%H時%M分') %> | </span>
+              <span><i class="fas fa-comments"></i> <%= link_to "#{@topic.topic_comments.count}", public_topic_path(@topic), class: "text-dark" %> | </span>
+              <span class="favorite-btn"><%= render 'public/favorites/favorite-btn', topic: @topic %></span>
             </div>
           </div>
-        <% end %>
-      </div>
-      <hr>
-      <div class="new-comment card-text">
-        <%= form_with model:[@topic, @topic_comment], url: public_topic_topic_comments_path(@topic.id), method: :post, local: true do |f| %>
-          <div class="form-group">
-            <label for="exampleformControlTextarea1" style="width: 100%;">コメントする</laber>
-            <%= f.text_area :comment, row:'5', class: "form-control mt-2", placeholder: "コメントを入力してください"  %>
+        </div>
+        <hr>
+        <div class="comments card-text">
+          <div class="comments-count">
+            <h4 class="mt-3"><%= @topic.topic_comments.count %>件コメント</h4>
           </div>
-          <%= f.submit "コメントする", class: "btn btn-lg btn-info mt-2 float-right" %>
-        <% end %>
+          <div id="topic_comments">
+            <%= render "public/topic_comments/topic_comment-index", topic: @topic %>
+          </div>
+        </div>
+        <hr>
+        <div class="new-comment card-text">
+          <%= form_with model:[@topic, @topic_comment], url: public_topic_topic_comments_path(@topic.id), method: :post do |f| %>
+            <div class="form-group">
+              <label for="exampleformControlTextarea1" style="width: 100%;">コメントする</laber>
+              <%= f.text_area :comment, row:'5', class: "form-control mt-2", placeholder: "コメントを入力してください"  %>
+            </div>
+            <%= f.submit "コメントする", class: "btn btn-lg btn-info mt-2 float-right" %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
