--- a/app/views/producer/farmers/follower.html.erb
+++ b/app/views/producer/farmers/follower.html.erb
@@ -14,7 +14,17 @@
             <td><%= attachment_image_tag end_user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg", class: "rounded-circle"; %></td>
             <td><%= end_user.name %></td>
             <td><%= "フォロー数: #{end_user.relationships.count}" %></td>
-            <td></td>
+            <td>
+              <% if @isRoom != true %>
+                <%= form_with model: @room, url: producer_end_user_rooms_path(end_user.id), method: :post do |f| %>
+                  <%= f.hidden_field :farmer_id, value: current_farmer.id %>
+                  <%= f.hidden_field :end_user_id, value: end_user.id %>
+                  <%= f.submit "チャットを始める", class: "btn btn-primary" %>
+                <% end %>
+              <% else %>
+                <%= link_to "チャットへ", producer_end_user_room_path(id: @room.id, end_user_id: end_user.id), class:"btn btn-primary" %>
+              <% end %>
+            </td>
           </tr>
         <% end %>
       </tbody>
