--- a/app/views/producer/rooms/show.html.erb
+++ b/app/views/producer/rooms/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="left-button pt-2">
-      <%= link_to "詳細画面に戻る", public_farmer_path(@room.farmer_id), class: "edit-link" %>
+      <%= link_to "一覧に戻る",  follower_producer_farmer_path(@room.farmer_id), class: "edit-link" %>
     </div>
     <h2 class="room-title mx-auto my-4">チャットルーム</h2>
   </div>
@@ -46,7 +46,7 @@
         <% end %>
       </div>
       <div class="posts col-12 py-3">
-        <%= form_with model: @chat, url: public_farmer_chats_path(@room.farmer_id), method: :post, local: true do |f| %>
+        <%= form_with model: @chat, url:  producer_end_user_chats_path(@room.end_user_id), method: :post, local: true do |f| %>
           <%= f.text_field :message, placeholder: "メッセージを入力してください", size: 70, class:"form-text-field" %>
             <%= f.hidden_field :room_id, value: @room.id %>
               <%= f.submit "投稿", class: "form-submit" %>
