[Update]ログイン画面・トップ画面のレイアウト変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,6 @@
 
   .jumbotron{
    background-image: url("roman-synkevych-fjj7lVpCxRE-unsplash.jpg");
-   background-position: center;
+   background-position: 50% 30%;
    background-size: cover;
  }
