--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,8 +3,21 @@
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto ">
           <h1 class="align-middle text-white">Aglilife</h1>
-          <h5 class="mt-4 text-white">農家さんの日常を覗いてみましょう</h>
+          <h5 class="mt-4 text-white">農家さんの日常を覗いてみましょう！！</h>
         </div>
       </div>
     </section>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-8 py-4 mx-auto" style="text-align:center;">
+        <h2 class="mb-3">AgriLifeとは</h2>
+        <strong style="line-height:2rem;">AgriLifeは農家さんとつながることに特化したアプリケーションです。</br>
+          農家さんがどんな生活をしているのか、どんな気持ちで農産物を育てているのか、 </br>
+          そんな情報を気軽にキャッチしてほしくて制作しました。　</br>
+          このアプリケーションで農業を身近に感じていただければ幸いです。
+        </strong>
+      </div>
+    </div>
   </div>
