--- a/app/views/producer/topics/new.html.erb
+++ b/app/views/producer/topics/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row no-gutters">
-    <div class="col-lg-5 mx-2 shadow-lg rouded px-0 my-5">
+    <div class="col-lg-5 mx-auto shadow-lg rouded px-0 my-5">
       <h5 class="text-dark bg-light p-4 mb-0">投稿フォーム</h5>
       <div class="form-body p-4">
         <%= form_with model: @topic, url: producer_topics_path, method: :post, local:true do |f| %>
