--- a/app/views/public/farmers/search.html.erb
+++ b/app/views/public/farmers/search.html.erb
@@ -10,43 +10,43 @@
   <h4>・カテゴリーで探す</h4>
   <div class="category d-flex justify-content-around mt-5">
     <div>
-      <%= link_to "野菜", search_public_farmers_path("q[category_eq]" => 0), class: "btn btn-primary" %>
+      <%= link_to "野菜", search_public_farmers_path("q[category_eq]" => 0), class: "btn btn-secondary btn-lg" %>
     </div>
     <div>
-      <%= link_to "果物", search_public_farmers_path("q[category_eq]" => 1), class: "btn btn-primary" %>
+      <%= link_to "果物", search_public_farmers_path("q[category_eq]" => 1), class: "btn btn-secondary btn-lg" %>
     </div>
     <div>
-      <%= link_to "米", search_public_farmers_path("q[category_eq]" => 2), class: "btn btn-primary" %>
+      <%= link_to "米", search_public_farmers_path("q[category_eq]" => 2), class: "btn btn-secondary btn-lg" %>
     </div>
     <div>
-      <%= link_to "畜産", search_public_farmers_path("q[category_eq]" => 3), class: "btn btn-primary" %>
+      <%= link_to "畜産", search_public_farmers_path("q[category_eq]" => 3), class: "btn btn-secondary btn-lg" %>
     </div>
     <div>
-      <%= link_to "その他", search_public_farmers_path("q[category_eq]" => 4), class: "btn btn-primary" %>
+      <%= link_to "その他", search_public_farmers_path("q[category_eq]" => 4), class: "btn btn-secondary btn-lg" %>
     </div>
   </div>
   <h4 class="my-5">・エリアから探す</h4>
   <div class="category d-flex justify-content-around">
     <div>
-      <%= link_to "北海道", search_public_farmers_path("q[region_eq]" => 0), class: "btn btn-primary" %>
+      <%= link_to "北海道", search_public_farmers_path("q[region_eq]" => 0), class: "btn btn-info btn-lg" %>
     </div>
     <div>
-      <%= link_to "東北", search_public_farmers_path("q[region_eq]" => 1), class: "btn btn-primary" %>
+      <%= link_to "東北", search_public_farmers_path("q[region_eq]" => 1), class: "btn btn-info btn-lg" %>
     </div>
     <div>
-      <%= link_to "関東", search_public_farmers_path("q[region_eq]" => 2), class: "btn btn-primary" %>
+      <%= link_to "関東", search_public_farmers_path("q[region_eq]" => 2), class: "btn btn-info btn-lg" %>
     </div>
     <div>
-      <%= link_to "中部", search_public_farmers_path("q[region_eq]" => 3), class: "btn btn-primary" %>
+      <%= link_to "中部", search_public_farmers_path("q[region_eq]" => 3), class: "btn btn-info btn-lg" %>
     </div>
     <div>
-      <%= link_to "関西", search_public_farmers_path("q[region_eq]" => 4), class: "btn btn-primary" %>
+      <%= link_to "関西", search_public_farmers_path("q[region_eq]" => 4), class: "btn btn-info btn-lg" %>
     </div>
     <div>
-      <%= link_to "中国・四国", search_public_farmers_path("q[region_eq]" => 5), class: "btn btn-primary" %>
+      <%= link_to "中国・四国", search_public_farmers_path("q[region_eq]" => 5), class: "btn btn-info btn-lg" %>
     </div>
     <div>
-      <%= link_to "九州・沖縄", search_public_farmers_path("q[region_eq]" => 6), class: "btn btn-primary" %>
+      <%= link_to "九州・沖縄", search_public_farmers_path("q[region_eq]" => 6), class: "btn btn-info btn-lg" %>
     </div>
   </div>
 </div>
