--- a/app/views/public/end_users/edit.html.erb
+++ b/app/views/public/end_users/edit.html.erb
@@ -1,31 +1,39 @@
-
 <div class="container">
+  <div class="row">
+    <h1 class="py-3">編集ページ</h1>
+  </div>
   <%= form_with model:@end_user, url: public_end_user_path(@end_user), method: :patch, local:true do |f| %>
     <div class="row">
-      <h2>編集</h2>
-      <div class="col-lg-3">
-        <div class="form-group">
-          <label for="end_user_image">ProfileImage</label>
-          <%= attachment_image_tag @end_user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %>
-          <%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: 'form-control-file end_user_image' %>
+      <div class="col-lg-5">
+        <div class="mb-3">
+          <%= attachment_image_tag @end_user, :profile_image, :fill, 200, 200, format: 'jpeg', fallback: "no_image.jpeg", size:'250x250' %>
+          <%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: "form-control-file mt-3" %>
         </div>
       </div>
+
       <div class="col-lg-7">
-        <div　class="form-group">
-          <label for="end_user_name">Name</label>
-          <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前", class: 'form-control name' %>
-        </div>
-        <div class="form-group">
-          <label for="end_user_email">Email</label>
-          <%= f.email_field :email, autofocus: true, id:"inputEmail", placeholder:"メールアドレス", class: 'form-control email' %>
-        </div>
-      </div>
-      <div class="form-group">
-        <%= f.submit "Update", class: 'btn btn-secondary' %>
-      </div>
-      <div class="withdrawal">
-        <%= link_to "退会する", unsubscribe_public_end_users_path, class: 'btn btn-danger' %>
+        <table class="table-borderless ">
+          <tbody>
+            <tr style="padding-bottom: 2px;">
+              <th style="width: 200px;"><h5 class="mb-5">名前：</h5></th>
+              <td style="width: 400px;"><%= f.text_field :name, autocomplete: "name", class: "form-control mb-5" %></td>
+            </tr>
+            <tr>
+              <th><h5>Eメール：</h5></th>
+              <td><%= f.text_field :email, autocomplete: "email", class: "form-control" %></td>
+            </tr>
+              <th></th>
+              <td><div class="mt-3"><%= f.submit "編集する", class: "btn btn-primary" %></td></div>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   <% end %>
+  <div class="row" style="width: 100%;">
+    <div class="col-lg-12 d-flex justify-content-end">
+      <div class="mr-5"><%= link_to "戻る", my_page_public_end_users_path, class: "btn btn-secondary" %></div>
+      <div class="ml-5"><%= link_to "退会する", unsubscribe_public_end_users_path, class: "btn btn-danger" %></div>
+    </div>
+  </div>
 </div>
