--- a/app/views/farmers/registrations/new.html.erb
+++ b/app/views/farmers/registrations/new.html.erb
@@ -1,88 +1,71 @@
 <div class="container">
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "farmers/shared/error_messages", resource: resource %>
-      <div class="row">
-        <div class="col-12">
-          <h2>Sign up</h2>
-        
-          <div class="field" style="width: 400px;">
+  <div class="row no-gutters">
+    <div class="col-lg-9 mx-auto shadow-lg rounded px-0 my-5">
+      <h5 class="text-dark bg-light p-4 mb-0">新規登録</h5>
+      <div class="form-body p-4">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "farmers/shared/error_messages", resource: resource %>
+          <div class="log-in float-right">
+            <%= render "farmers/shared/links" %>
+          </div>
+          <div class="profile_image-input">
             <%= f.label "プロフィール画像" %><br />
             <%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: 'form-control-file' %>
           </div>
-          
-          <div class="field" style="width: 400px;">
+          <div class="farm_image-input mt-4">
             <%= f.label "農園画像" %><br />
             <%= f.attachment_field :farm_image, placeholder: "農園画像", class: 'form-control-file' %>
           </div>
-
-          <div class="field" style="width: 400px;">
-            <%= f.label "農園名" %><br />
-            <%= f.text_field :farm_name, autofocus: true, autocomplete: "farm_name", class: "form-control" %>
+          <div class="input-group mb-3 mt-4">
+            <%= f.text_field :farm_name, class:"form-control", autofocus: true, autocomplete: "farm_name", placeholder:"農園名" %>
           </div>
-        
-          <div class="field" style="width: 400px;">
-            <%= f.label "お名前" %><br />
-            <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
+          <div class="input-group mt-4">
+            <%= f.text_field :name, class:"form-control", autofocus: true, autocomplete: "name", placeholder:"お名前" %>
           </div>
-        
-          <div class="field" style="width: 400px;">
-            <%= f.label :email %><br />
-            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+          <div class="input-group  mt-4">
+            <%= f.email_field :email, class:"form-control", autofocus: true, autocomplete: "email", placeholder:"Email" %>
           </div>
-        
-          <div class="field" style="width: 400px;">
-            <%= f.label "地域" %><br />
-            <%= f.select :region, Farmer.regions.keys, {include_blank: "選択してください"}, {class: "form-control"} %>
+          <div class="input-group mt-4">
+            <%= f.select :region, Farmer.regions.keys, {include_blank: "地域を選択してください"}, {class: "form-control"} %>
           </div>
-        
-          <div class="field" style="width: 400px;">
-            <%= f.label "郵便番号" %><br />
-            <%= f.text_field :postcode, autofocus: true, autocomplete: "postcode", class: "form-control" %>
+          <div class="input-group mt-4">
+            <%= f.text_field :postcode, class:"form-control", autofocus: true, autocomplete: "postcode", placeholder:"郵便番号" %>
           </div>
-        
-          <div class="field" style="width: 400px;">
-            <%= f.label "都道府県" %><br />
-            <%= f.text_field :prefecture, autofocus: true, autocomplete: "prefecture", class: "form-control" %>
+          <div class="input-group mt-4">
+            <%= f.text_field :prefecture, class:"form-control", autofocus: true, autocomplete: "prefecture", placeholder:"都道府県" %>
           </div>
-        
-          <div class="field" style="width: 400px;">
-            <%= f.label :"住所" %><br />
-            <%= f.text_field :address, autofocus: true, autocomplete: "address", class: "form-control" %>
+          <div class="input-group mt-4">
+            <%= f.text_field :address, class:"form-control", autofocus: true, autocomplete: "address", placeholder:"住所" %>
           </div>
-        
-          <div class="field" style="width: 400px;">
-            <%= f.label :"電話番号" %><br />
-            <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number", class: "form-control" %>
+          <div class="input-group mt-4">
+            <%= f.text_field :telephone_number, class:"form-control", autofocus: true, autocomplete: "telephone_number", placeholder:"電話番号" %>
           </div>
-        
-          <div class="field" style="width: 400px;">
-            <%= f.label :"説明" %><br />
-            <%= f.text_area :introduction, autofocus: true, autocomplete: "introduction", class: "form-control" %>
+          <div class="input-group mt-4">
+            <%= f.text_area :introduction, class:"form-control", rows:"3", autofocus: true, autocomplete: "introduction", placeholder:"説明" %>
           </div>
-        
-          <div class="field" style="width: 400px;">
-            <%= f.label :"カテゴリー" %><br />
-            <%= f.select :category, Farmer.categories.keys, {include_blank: "選択してください"}, {class: "form-control"} %>
+          <div class="input-group mt-4">
+            <%= f.select :category, Farmer.categories.keys, {include_blank: "カテゴリーを選択してください"}, {class: "form-control"} %>
           </div>
-        
-          <div class="field" style="width: 400px;">
-            <%= f.label :password %>
+          <div class="input-group mt-4">
             <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <em><% @minimum_password_length %></em>
             <% end %><br />
-            <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+            <%= f.password_field :password, autocomplete: "new-password", class: "form-control", placeholder:"パスワード 6文字以上" %>
           </div>
-        
-          <div class="field" style="width: 400px;">
-            <%= f.label :password_confirmation %><br />
-            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+          <div class="input-group mt-4">
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder:"パスワード（確認用）" %>
           </div>
-        
-          <div class="actions">
+          <% if devise_mapping.rememberable? %>
+          <div class="field">
+            <%= f.check_box :remember_me %>
+            <%= f.label :remember_me %>
+          </div>
+          <% end %>
+          <div class="actions mb-4 float-right">
             <%= f.submit "Sign up" %>
           </div>
-        </div>
+        <% end %>
       </div>
-  <% end %>
-  <%= render "farmers/shared/links" %>
+    </div>
+  </div>
 </div>
