--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,14 @@
     <header class='shadow-sm'>
       <nav class="navbar navbar-expand-lg navbar-silver">
         <div class="container">
-          <a class="navbar-brand p-3" href="/"><%= image_tag 'logo.png', :size =>'120x40' %></a>
-
+          <div class"logo">
+            <% if farmer_signed_in? %>
+              <a class="navbar-brand p-3" href="/producer/farmers/my_page"><%= image_tag 'logo.png', :size =>'120x40' %></a>
+            <% else %>
+              <a class="navbar-brand p-3" href="/"><%= image_tag 'logo.png', :size =>'120x40' %></a>
+            <% end %>
+          </div>
+          
           <!--ハンバーガーメニュー-->
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
