--- a/app/views/public/end_users/my_page.html.erb
+++ b/app/views/public/end_users/my_page.html.erb
@@ -29,7 +29,7 @@
       <%= link_to "いいね一覧", favorites_public_end_user_path(@end_user) %>
     </div>
     <div class="col-4">
-      <p>チャット一覧</p>
+      <%= link_to "チャット一覧", chater_public_end_user_path(@end_user) %>
     </div>
   </div>
 </div>
