--- a/app/views/end_users/registrations/new.html.erb
+++ b/app/views/end_users/registrations/new.html.erb
@@ -1,34 +1,41 @@
-<h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "end_users/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+<div class="container">
+  <div class="row no-gutters">
+    <div class="col-lg-5 mx-auto shadow-lg rounded px-0 my-5">
+      <h5 class="text-dark bg-light p-4 mb-0">新規登録</h5>
+      <div class="form-body p-4">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "end_users/shared/error_messages", resource: resource %>
+          <div class="input-group mb-3 mt-4">
+            <%= f.text_field :name, class:"form-control", autofocus: true, autocomplete: "name", placeholder:"名前" %>
+          </div>
+          <div class="input-group mt-4">
+            <%= f.email_field :email, class:"form-control", autofocus: true, autocomplete: "email", placeholder:"Email" %>
+          </div>
+          <div class="input-group mt-4">
+            <% if @minimum_password_length %>
+              <em><% @minimum_password_length %></em>
+            <% end %>
+            <%= f.password_field :password, class:"form-control", autocomplete: "current-password", placeholder:"パスワード 6文字以上" %>
+          </div>
+          <div class="input-group mt-4">
+            <%= f.password_field :password_confirmation, class:"form-control", autocomplete: "new-password", placeholder:"パスワード（確認用）" %>
+          </div>
+          <% if devise_mapping.rememberable? %>
+          <div class="field">
+            <%= f.check_box :remember_me %>
+            <%= f.label :remember_me %>
+          </div>
+          <div>
+            <%= render "end_users/shared/links" %>
+          </div>
+          <% end %>
+          <div class="actions mb-4 float-right">
+            <%= f.submit "Sign up" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "end_users/shared/links" %>
+</div>
