[Update]Top画面に画像スライダー

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,5 @@
-  <div class="jumbotron text-center" style="height: 600px;">
-   <section class="py-5 container">
+  <div class="TopImage jumbotron text-center" style="height: 600px">
+    <section class="py-5 container">
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto ">
           <h1 class="align-middle text-white">Aglilife</h1>
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="row">
       <div class="col-8 py-4 mx-auto" style="text-align:center;">
-        <h2 class="mb-3">AgriLifeとは</h2>
+        <h2 class="jquery mb-3">AgriLifeとは</h2>
         <strong style="line-height:2rem;">AgriLifeは農家さんとつながることに特化したアプリケーションです。</br>
           農家さんがどんな生活をしているのか、どんな気持ちで農産物を育てているのか、 </br>
           そんな情報を気軽にキャッチしてほしくて制作しました。　</br>
@@ -21,3 +21,11 @@
       </div>
     </div>
   </div>
+  
+  <div class="TopImage-under">
+      <div class="top_image2"></div>
+      <div class="top_image3"></div>
+      <div class="top_image4"></div>
+      <div class="top_image5"></div>
+  </div>
+  
