--- a/app/views/farmers/registrations/new.html.erb
+++ b/app/views/farmers/registrations/new.html.erb
@@ -38,7 +38,7 @@
             <%= f.text_field :address, class:"form-control", autofocus: true, autocomplete: "address", placeholder:"住所" %>
           </div>
           <div class="input-group mt-4">
-            <%= f.text_field :telephone_number, class:"form-control", autofocus: true, autocomplete: "telephone_number", placeholder:"電話番号" %>
+            <%= f.text_field :telephone_number, class:"form-control",autocomplete: "telephone_number", placeholder:"電話番号" %>
           </div>
           <div class="input-group mt-4">
             <%= f.text_area :introduction, class:"form-control", rows:"3", autofocus: true, autocomplete: "introduction", placeholder:"説明" %>
