--- a/app/views/producer/farmers/edit.html.erb
+++ b/app/views/producer/farmers/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h1 class="pt-3">編集ページ</h1>
+    <h1 class="pt-3 ml-3">編集ページ</h1>
   </div>
   <%= form_with model:@farmer, url: producer_farmer_path(@farmer), method: :patch, local:true do |f| %>
     <div class="row">
@@ -9,10 +9,10 @@
           <%= attachment_image_tag @farmer, :profile_image, :fill, 200, 200, format: 'jpeg', fallback: "no_image.jpeg", size:'250x250' %>
           <%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: "form-control-file" %>
         </div>
-        <div>
-          <%= attachment_image_tag @farmer, :farm_image, :fill, 300, 300, format: 'jpeg', fallback: "no_image.jpeg", size:'300x200' %>
+        <div class="mt-5">
+          <%= attachment_image_tag @farmer, :farm_image, :fill, 500, 500, format: 'jpeg', fallback: "no_image.jpeg", size:'400x400' %>
           <%= f.attachment_field :farm_image, placeholder: "農園画像", class: "form-control-file" %>
-          </div>
+        </div>
       </div>
 
       <div class="col-lg-7">
@@ -24,44 +24,44 @@
               <td style="width: 400px;"><%= f.text_field :farm_name, autocomplete: "farm_name", class: "form-control" %></td>
             </tr>
             <tr>
-              <th><h5>名前：</h5></th>
-              <td><%= f.text_field :name, autocomplete: "name", class: "form-control" %></td>
+              <th class="mt-3"><h5 class="mt-3">名前：</h5></th>
+              <td class="mt-3"><%= f.text_field :name, autocomplete: "name", class: "form-control mt-3" %></td>
             </tr>
             <tr>
-              <th><h5>Email：</h5></th>
-              <td><%= f.email_field :email, autocomplete: "email", class: "form-control" %></td>
+              <th><h5 class="mt-3">Email：</h5></th>
+              <td><%= f.email_field :email, autocomplete: "email", class: "form-control mt-3" %></td>
             </tr>
             <tr>
-              <th><h5>地域：</h5></th>
-              <td><%= f.select :region, Farmer.regions.keys, {}, {class: "form-control"} %></td>
+              <th><h5 class="mt-3">地域：</h5></th>
+              <td><%= f.select :region, Farmer.regions.keys, {}, {class: "form-control mt-3"} %></td>
             </tr>
             <tr>
-              <th><h5>郵便番号：</h5></th>
-              <td><%= f.text_field :postcode, autocomplete: "postcode", class: "form-control" %></td>
+              <th><h5 class="mt-3">郵便番号：</h5></th>
+              <td><%= f.text_field :postcode, autocomplete: "postcode", class: "form-control mt-3" %></td>
             </tr>
             <tr>
-              <th><h5>都道府県：</h5></th>
-              <td><%= f.text_field :prefecture, autocomplete: "prefecture", class: "form-control" %></td>
+              <th><h5 class="mt-3">都道府県：</h5></th>
+              <td><%= f.text_field :prefecture, autocomplete: "prefecture", class: "form-control mt-3" %></td>
             </tr>
             <tr>
-              <th><h5>住所：</h5></th>
-              <td><%= f.text_field :address, autocomplete: "address", class: "form-control" %></td>
+              <th><h5 class="mt-3">住所：</h5></th>
+              <td><%= f.text_field :address, autocomplete: "address", class: "form-control mt-3" %></td>
             </tr>
             <tr>
-              <th><h5>電話番号：</h5></th>
-              <td><%= f.text_field :telephone_number, autocomplete: "telephone_number", class: "form-control" %></td>
+              <th><h5 class="mt-3">電話番号：</h5></th>
+              <td><%= f.text_field :telephone_number, autocomplete: "telephone_number", class: "form-control mt-3" %></td>
             </tr>
             <tr>
-              <th><h5>説明：</h5></th>
-              <td><%= f.text_area :introduction, autocomplete: "introduction", class: "form-control" %></td>
+              <th><h5 class="mt-3">説明：</h5></th>
+              <td><%= f.text_area :introduction, autocomplete: "introduction", class: "form-control mt-3" %></td>
             </tr>
             <tr>
-              <th><h5>カテゴリー：</h5></th>
-              <td><%= f.select :category, Farmer.categories.keys, {}, {class: "form-control"} %></td>
+              <th><h5 class="mt-3">カテゴリー：</h5></th>
+              <td><%= f.select :category, Farmer.categories.keys, {}, {class: "form-control mt-3"} %></td>
             </tr>
             <tr>
               <th></th>
-              <td><div class="mt-3"><%= f.submit "Update", class: "btn btn-primary" %></td></div>
+              <td><div class="mt-3"><%= f.submit "編集する", class: "btn btn-primary" %></td></div>
             </tr>
           </tbody>
         </table>
@@ -69,8 +69,8 @@
   <% end %>
   <div class="row" style="width: 1500px;">
     <div class="col-lg-12 d-flex justify-content-end">
-      <div class="mr-5"><%= link_to "戻る", my_page_producer_farmers_path, class: "btn btn-secondary" %></div>
-      <div class="ml-5"><%= link_to "退会する", unsubscribe_producer_farmers_path, class: "btn btn-danger" %></div>
+      <div class="mr-5"><%= link_to "戻る", my_page_producer_farmers_path, class: "btn btn-secondary mb-3" %></div>
+      <div class="ml-5"><%= link_to "退会する", unsubscribe_producer_farmers_path, class: "btn btn-danger mb-3" %></div>
     </div>
   </div>
 </div>
