--- a/app/views/public/relationships/create.js.erb
+++ b/app/views/public/relationships/create.js.erb
@@ -1,1 +1,2 @@
 $("#relationship-btn").html("<%= j(render 'public/relationships/relationship-btn', farmer: @farmer) %>");
+$(".chat-btn").html("<%= j(render 'public/chats/chat-btn', farmer: @farmer) %>");
