--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,8 +2,9 @@
     <section class="py-3 container">
       <div class="row py-lg-3">
         <div class="col-lg-6 col-md-8 mx-auto ">
-          <h1 class="align-middle text-white">Aglilife</h1>
-          <h5 class="mt-4 text-white">農家さんの日常を覗いてみましょう！！</h>
+          <h1 class="mt-3 mb-5 align-middle text-white font-weight-bold display-3" style="letter-spacing: 2px;">Agrilife</h1>
+          <br>
+          <h3 class="mt-5 text-white">農家さんの日常を触れてみましょう</h3>
         </div>
       </div>
     </section>
@@ -11,21 +12,20 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-8 py-4 mx-auto" style="text-align:center;">
+      <div class="col-10 py-4 mx-auto" style="text-align:center;">
         <h2 class="jquery mb-3">AgriLifeとは</h2>
-        <strong style="line-height:2rem;">AgriLifeは農家さんとつながることに特化したアプリケーションです。</br>
+        <p class="h5 font-weight-bold" style="line-height:2rem; letter-spacing: 4px;">AgriLifeは農家さんとつながることに特化したアプリケーションです。</br>
           農家さんがどんな生活をしているのか、どんな気持ちで農産物を育てているのか、 </br>
           そんな情報を気軽にキャッチしてほしくて制作しました。　</br>
           このアプリケーションで農業を身近に感じていただければ幸いです。
-        </strong>
+        </p>
       </div>
     </div>
   </div>
-  
+
   <div class="TopImage-under">
       <div class="top_image2"></div>
       <div class="top_image3"></div>
       <div class="top_image4"></div>
       <div class="top_image5"></div>
   </div>
-  
