--- a/app/views/kaminari/_page.html.erb
+++ b/app/views/kaminari/_page.html.erb
@@ -7,6 +7,17 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<span class="page<%= ' current' if page.current? %>">
-  <%= link_to_unless page.current?, page, url, {remote: remote, rel: page.rel} %>
-</span>
+
+  <!--<li class="page<%#= ' current' if page.current? %>">-->
+    <!--<%#= link_to_unless page.current?, page, url, {remote: remote, rel: page.rel} %>-->
+  <!--</li>-->
+  
+  <% if page.current? %>
+  <li class='active'>
+    <%= content_tag :a, page, data: { remote: remote }, rel: page.rel %>
+  </li>
+<% else %>
+  <li>
+    <%= link_to page, url, remote: remote, rel: page.rel %>
+  </li>
+<% end %>
